--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <!--Div to contain the whole calculator-->
+    <div class="calculator-body">
+
+        <!--Div to contain the display/screen-->
+        <div class="screen">
+            0
+        </div>
+
+        <!--Div to contain the button area-->
+        <div class="button-body">
+
+            <!--Div to contain clear/delete buttons-->
+            <div class="clear-buttons">
+                <button id="clear">CLEAR</button>
+                <button id="delete">DELETE</button>
+            </div>
+
+            <!--Div to contain the numbers and operators-->
+            <div class="number-pad">
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button id="divide">/</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button id="multiply">x</button>
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button id="subtract">-</button>
+                <button id="decimal">.</button>
+                <button id="zero">0</button>
+                <button id="equal=s">=</button>
+                <button id="add">+</button>
+            </div>
+
+        </div>
+
+    </div>
     
     <!--Link to external JavaScript file, MUST GO AT END!-->
     <script src="script.js"></script>
