Added ability to display numbers

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!--Div to contain the display/screen-->
         <div class="screen">
-            0
+            <div id="input">0</div>
         </div>
 
         <!--Div to contain the button area-->
@@ -41,7 +41,7 @@
                 <button id="subtract">-</button>
                 <button id="decimal">.</button>
                 <button id="zero">0</button>
-                <button id="equal=s">=</button>
+                <button id="equals">=</button>
                 <button id="add">+</button>
             </div>
 
