--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
 
             <!--Div to contain the numbers and operators-->
             <div class="number-pad">
-                <button id="seven">7</button>
-                <button id="eight">8</button>
-                <button id="nine">9</button>
-                <button id="divide">/</button>
-                <button id="four">4</button>
-                <button id="five">5</button>
-                <button id="six">6</button>
-                <button id="multiply">x</button>
-                <button id="one">1</button>
-                <button id="two">2</button>
-                <button id="three">3</button>
-                <button id="subtract">-</button>
-                <button id="decimal">.</button>
-                <button id="zero">0</button>
-                <button id="equals">=</button>
-                <button id="add">+</button>
+                <button class="number" id="seven">7</button>
+                <button class="number" id="eight">8</button>
+                <button class="number" id="nine">9</button>
+                <button class="operator" id="divide">/</button>
+                <button class="number" id="four">4</button>
+                <button class="number" id="five">5</button>
+                <button class="number" id="six">6</button>
+                <button class="operator" id="multiply">x</button>
+                <button class="number" id="one">1</button>
+                <button class="number" id="two">2</button>
+                <button class="number" id="three">3</button>
+                <button class="operator" id="subtract">-</button>
+                <button class="number" id="decimal">.</button>
+                <button class="number" id="zero">0</button>
+                <button class="operator" id="equals">=</button>
+                <button class="operator" id="add">+</button>
             </div>
 
         </div>
