--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         </div>
 
     </div>
+
+    <div class="footer">
+        Made by Tyler Piwowarski
+    </div>
     
     <!--Link to external JavaScript file, MUST GO AT END!-->
     <script src="script.js"></script>
